# is-robots

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.arm  Makefile  README.md  aria-driver.hpp  arm-ldd  bootstrap.sh  build.sh  conanfile.py  power.pb.cc  power.pb.h  power_info.json  robot-driver.hpp  robot-gateway.cpp  robot-gateway.hpp  test.cpp
aria/: Dockerfile  Makefile  README.md
etc/conf/: options.json
etc/docker/: Dockerfile.arm  Dockerfile.arm7hf
examples/: client.py  requirements.txt  sonar.py
msgs/: power.proto
src/is/robot-drivers/: CMakeLists.txt
src/is/robot-drivers/aria/: CMakeLists.txt  aria-driver.cpp  aria-driver.hpp
src/is/robot-drivers/interface/: CMakeLists.txt  robot-driver.hpp
src/is/robot-gateway/: CMakeLists.txt  robot-gateway.cpp  robot-gateway.hpp  service.cpp
src/is/robot-gateway/conf/: options.proto
